// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`saveWebScreen > should handle NaN dimension values 1`] = `
{
  "devicePixelRatio": 2,
  "fileName": "test-screen.png",
}
`;

exports[`saveWebScreen > should handle NaN dimension values 2`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
]
`;

exports[`saveWebScreen > should handle NaN dimension values 3`] = `
[
  "screenshot-data",
  {
    "devicePixelRatio": NaN,
    "enableLegacyScreenshotMethod": false,
    "initialDevicePixelRatio": NaN,
    "innerHeight": NaN,
    "innerWidth": NaN,
    "isAndroidChromeDriverScreenshot": false,
    "isAndroidNativeWebScreenshot": false,
    "isEmulated": false,
    "isIOS": false,
    "isLandscape": false,
  },
]
`;

exports[`saveWebScreen > should handle NaN dimension values 4`] = `
[
  {
    "addIOSBezelCorners": false,
    "base64Image": "screenshot-data",
    "deviceName": "desktop",
    "devicePixelRatio": NaN,
    "isIOS": false,
    "isLandscape": false,
    "rectangles": {
      "height": 100,
      "width": 100,
      "x": 0,
      "y": 0,
    },
  },
]
`;

exports[`saveWebScreen > should handle NaN dimension values 5`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "cropped-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": NaN,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": NaN,
      "outerWidth": NaN,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": NaN,
      "screenWidth": NaN,
      "tag": "test-screen",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "Windows 10",
    "removeElements": [],
  },
]
`;

exports[`saveWebScreen > should handle custom screen sizes 1`] = `
{
  "isAndroid": false,
  "isMobile": false,
}
`;

exports[`saveWebScreen > should handle custom screen sizes 2`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "cropped-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": 2,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": 1000,
      "outerWidth": 1200,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": 1080,
      "screenWidth": 1920,
      "tag": "test-screen",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "Windows 10",
    "removeElements": [],
  },
]
`;

exports[`saveWebScreen > should handle mobile device correctly 1`] = `
[
  {
    "isAndroid": true,
    "isMobile": true,
  },
]
`;

exports[`saveWebScreen > should handle mobile device correctly 2`] = `
[
  {
    "isAndroid": true,
    "isMobile": true,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "cropped-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": 2,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": 1000,
      "outerWidth": 1200,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": 1080,
      "screenWidth": 1920,
      "tag": "test-screen",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "Android",
    "removeElements": [],
  },
]
`;

exports[`saveWebScreen > should use Bidi screenshot when available and not mobile 1`] = `
{
  "devicePixelRatio": 2,
  "fileName": "test-screen.png",
}
`;

exports[`saveWebScreen > should use Bidi screenshot when available and not mobile 2`] = `
[
  {
    "browserInstance": {
      "isAndroid": false,
      "isMobile": false,
    },
  },
]
`;

exports[`saveWebScreen > should use Bidi screenshot when available and not mobile 3`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "bidi-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": 2,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": 1000,
      "outerWidth": 1200,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": 1080,
      "screenWidth": 1920,
      "tag": "test-screen",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "Windows 10",
    "removeElements": [],
  },
]
`;

exports[`saveWebScreen > should use default values when hideElements and removeElements are not provided 1`] = `
{
  "devicePixelRatio": 2,
  "fileName": "test-screen.png",
}
`;

exports[`saveWebScreen > should use default values when hideElements and removeElements are not provided 2`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
]
`;

exports[`saveWebScreen > should use default values when hideElements and removeElements are not provided 3`] = `
[
  "screenshot-data",
  {
    "devicePixelRatio": 2,
    "enableLegacyScreenshotMethod": false,
    "initialDevicePixelRatio": 2,
    "innerHeight": 900,
    "innerWidth": 1200,
    "isAndroidChromeDriverScreenshot": false,
    "isAndroidNativeWebScreenshot": false,
    "isEmulated": false,
    "isIOS": false,
    "isLandscape": false,
  },
]
`;

exports[`saveWebScreen > should use default values when hideElements and removeElements are not provided 4`] = `
[
  {
    "addIOSBezelCorners": false,
    "base64Image": "screenshot-data",
    "deviceName": "desktop",
    "devicePixelRatio": 2,
    "isIOS": false,
    "isLandscape": false,
    "rectangles": {
      "height": 100,
      "width": 100,
      "x": 0,
      "y": 0,
    },
  },
]
`;

exports[`saveWebScreen > should use default values when hideElements and removeElements are not provided 5`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "cropped-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": 2,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": 1000,
      "outerWidth": 1200,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": 1080,
      "screenWidth": 1920,
      "tag": "test-screen",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "Windows 10",
    "removeElements": [],
  },
]
`;

exports[`saveWebScreen > should use legacy method when Bidi is not available 1`] = `
{
  "devicePixelRatio": 2,
  "fileName": "test-screen.png",
}
`;

exports[`saveWebScreen > should use legacy method when Bidi is not available 2`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
]
`;

exports[`saveWebScreen > should use legacy method when Bidi is not available 3`] = `
[
  "screenshot-data",
  {
    "devicePixelRatio": 2,
    "enableLegacyScreenshotMethod": false,
    "initialDevicePixelRatio": 2,
    "innerHeight": 900,
    "innerWidth": 1200,
    "isAndroidChromeDriverScreenshot": false,
    "isAndroidNativeWebScreenshot": false,
    "isEmulated": false,
    "isIOS": false,
    "isLandscape": false,
  },
]
`;

exports[`saveWebScreen > should use legacy method when Bidi is not available 4`] = `
[
  {
    "addIOSBezelCorners": false,
    "base64Image": "screenshot-data",
    "deviceName": "desktop",
    "devicePixelRatio": 2,
    "isIOS": false,
    "isLandscape": false,
    "rectangles": {
      "height": 100,
      "width": 100,
      "x": 0,
      "y": 0,
    },
  },
]
`;

exports[`saveWebScreen > should use legacy method when Bidi is not available 5`] = `
[
  {
    "isAndroid": false,
    "isMobile": false,
  },
  {
    "actualFolder": "/test/actual",
    "base64Image": "cropped-screenshot-data",
    "disableBlinkingCursor": false,
    "disableCSSAnimation": false,
    "enableLayoutTesting": false,
    "fileName": {
      "browserName": "chrome",
      "browserVersion": "120.0.0",
      "deviceName": "desktop",
      "devicePixelRatio": 2,
      "formatImageName": "{tag}-{logName}-{width}x{height}-dpr-{dpr}",
      "isMobile": false,
      "isTestInBrowser": true,
      "logName": "chrome",
      "name": "chrome",
      "outerHeight": 1000,
      "outerWidth": 1200,
      "platformName": "desktop",
      "platformVersion": "120.0.0",
      "screenHeight": 1080,
      "screenWidth": 1920,
      "tag": "test-screen",
    },
    "filePath": {
      "browserName": "chrome",
      "deviceName": "desktop",
      "isMobile": false,
      "savePerInstance": true,
    },
    "hideElements": [],
    "hideScrollBars": true,
    "isLandscape": false,
    "isNativeContext": false,
    "platformName": "Windows 10",
    "removeElements": [],
  },
]
`;
